k8s/examples/my-deployment.yaml
# File: my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: docker.io/nomeutente/nomeimmagine:tag
        ports:
        - containerPort: 80
