k8s/examples/webserver1-deployment.yaml
apiVersion: v1
namespaces: test
kind: Service
metadata:
  name: webserver1
spec:
  selector:
    app: webserver1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
namespaces: test
kind: Deployment
metadata:
  name: webserver1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver1
  template:
    metadata:
      labels:
        app: webserver1
    spec:
      containers:
      - name: webserver1-container
        image: nginx:latest
        ports:
        - containerPort: 8080
