k8s/examples/webserver2.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver2
spec:
  selector:
    app: webserver2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver2
  template:
    metadata:
      labels:
        app: webserver2
    spec:
      containers:
      - name: webserver2-container
        image: nginx:latest
        ports:
        - containerPort: 8080
