k8s/examples/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
spec:
  rules:
  - host: webserver.depax.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver1
            port:
              number: 80
